feat(theme): adjust spacing around .post-tag

--- a/themes/hugo-book/assets/components/_tag.css
+++ b/themes/hugo-book/assets/components/_tag.css
@@ -2,10 +2,10 @@
   @apply flex items-center text-muted;
 
   &__icon {
-    @apply mr-1;
+    @apply mr-1.5;
   }
 
   &__label {
-    @apply mr-4;
+    @apply mr-4 mt-0.5;
   }
 }
