--- a/themes/hugo-book/layouts/partials/docs/icon.html
+++ b/themes/hugo-book/layouts/partials/docs/icon.html
@@ -10,11 +10,11 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
   </svg>
-{{- else if eq .Icon "refresh"  -}}
+{{- else if eq .Icon "pencil-alt"  -}}
   <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24"
        stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
+          d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"/>
   </svg>
 {{- else if eq .Icon "link" -}}
   <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24"
