--- a/themes/hugo-book/layouts/partials/docs/date.html
+++ b/themes/hugo-book/layouts/partials/docs/date.html
@@ -2,5 +2,4 @@
   Returns formatted date.
   Usage: partial "docs/date" (dict "Date" .Date "Format" .Site.Params.BookDateFormat)
 -->
-{{- $format := default "January 2, 2006" .Format -}}
-{{- return (.Date.Format $format) -}}
+{{- .Format "2006.01.02" -}}
