--- a/themes/hugo-book/layouts/partials/docs/post-item.html
+++ b/themes/hugo-book/layouts/partials/docs/post-item.html
@@ -1,21 +1,6 @@
 <article class="book-post">
   <header class="book-post__header">
-    <h2 class="book-post__title book-post__title--level-2">
-      <a href="{{ .RelPermalink }}">{{ partial "docs/title.html" . }}</a>
-    </h2>
-    <div class="book-post__meta">
-        {{ $pubDate := partial "docs/date" (dict "Date" .Date "Format" $.Site.Params.BookDateFormat) }}
-        {{ $label := printf "%sに公開" $pubDate | safeHTML }}
-        {{ partial "docs/tag" (dict "Icon" "calendar" "Label" $label) }}
-        {{ with .Lastmod }}
-            {{ $lastmod := partial "docs/date" (dict "Date" . "Format" $.Site.Params.BookDateFormat) }}
-            {{ $label = printf "%sに更新" $lastmod | safeHTML }}
-            {{ partial "docs/tag" (dict "Icon" "pencil-alt" "Label" $label) }}
-        {{ end }}
-        {{ $mins := math.Round (div .WordCount 220.0) }}
-        {{ $label = printf "%.f min reads" $mins | safeHTML }}
-        {{ partial "docs/tag" (dict "Icon" "clock" "Label" $label) }}
-    </div>
+      {{ partial "docs/post-meta.html" (dict "Level" 2 "Post" .) }}
   </header>
 
   <section>
