--- a/themes/hugo-book/layouts/partials/docs/post-meta.html
+++ b/themes/hugo-book/layouts/partials/docs/post-meta.html
@@ -15,4 +15,11 @@
       {{ $label = printf "%.f min reads" $mins | safeHTML }}
       {{ partial "docs/post-term" (dict "Icon" "clock" "Label" $label) }}
   </div>
+  {{- with .GetTerms "tags" }}
+    <div class="book-post__tags">
+        {{ range . }}
+          <a href="{{ .RelPermalink }}" title="{{ .Title }}" class="book-tag">{{ .Title }}</a>
+        {{- end }}
+    </div>
+  {{ end -}}
 {{ end }}
