--- a/themes/hugo-book/layouts/_default/single.html
+++ b/themes/hugo-book/layouts/_default/single.html
@@ -13,5 +13,9 @@
 {{ end }}
 
 {{ define "toc" }}
-    {{ partial "docs/toc" . }}
+  <div class="book-toc">
+    <div class="book-toc__body">
+        {{ partial "docs/toc" . }}
+    </div>
+  </div>
 {{ end }}
