refactor(theme): use <time> for datetime

--- a/themes/hugo-book/layouts/partials/docs/date.html
+++ b/themes/hugo-book/layouts/partials/docs/date.html
@@ -1,5 +1,1 @@
-<!--
-  Returns formatted date.
-  Usage: partial "docs/date" (dict "Date" .Date "Format" .Site.Params.BookDateFormat)
--->
-{{- .Format "2006.01.02" -}}
+<time datetime="{{- .Format "2006-01-02" -}}">{{- .Format "2006.01.02" -}}</time>
