feat(theme): redo paging

--- a/themes/hugo-book/assets/book.css
+++ b/themes/hugo-book/assets/book.css
@@ -5,7 +5,7 @@
 @import "components/_link.css";
 @import "components/_nav.css";
 @import "components/_page.css";
-@import "components/_pagination.css";
+@import "components/_paging.css";
 @import "components/_post.css";
 @import "components/_post-term.css";
 @import "components/_tag.css";
