--- a/themes/hugo-book/layouts/partials/docs/icon.html
+++ b/themes/hugo-book/layouts/partials/docs/icon.html
@@ -22,4 +22,20 @@
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
           d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"/>
   </svg>
+{{- else if eq .Icon "chevron-left" -}}
+  <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
+  </svg>
+{{- else if eq .Icon "chevron-right" -}}
+  <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
+  </svg>
+{{- else if eq .Icon "chevron-double-left" -}}
+  <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 19l-7-7 7-7m8 14l-7-7 7-7" />
+  </svg>
+{{- else if eq .Icon "chevron-double-right" -}}
+  <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24" stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7" />
+  </svg>
 {{- end }}
