--- a/themes/hugo-book/layouts/partials/docs/html-head.html
+++ b/themes/hugo-book/layouts/partials/docs/html-head.html
@@ -14,9 +14,11 @@
 <!-- Theme stylesheet, you can customize scss by creating `assets/custom.scss` in your website -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@600;700&display=swap" rel="stylesheet">
-{{- $styles := resources.Get "book.css" | resources.PostCSS | resources.Minify | resources.Fingerprint }}
-<link rel="stylesheet" href="{{ $styles.RelPermalink }}" {{ template "integrity" $styles }}>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Noto+Serif+JP:wght@600;700&display=swap" rel="stylesheet">
+{{- $mainCss := resources.Get "book.css" | resources.PostCSS | resources.Minify | resources.Fingerprint }}
+<link rel="stylesheet" href="{{ $mainCss.RelPermalink }}" {{ template "integrity" $mainCss }}>
+{{- $syntaxCss := resources.Get "syntax.css" | resources.Minify | resources.Fingerprint }}
+<link rel="stylesheet" href="{{ $syntaxCss.RelPermalink }}" {{ template "integrity" $syntaxCss }}>
 
 {{- template "_internal/google_analytics_async.html" . -}}
 
