feat(theme): use small fonts only for small devices

--- a/themes/hugo-book/assets/_markdown.css
+++ b/themes/hugo-book/assets/_markdown.css
@@ -60,7 +60,7 @@
   }
 
   table {
-    @apply leading-normal my-6 text-sm w-full;
+    @apply leading-normal my-6 text-sm sm:text-base w-full;
   }
 
   thead,
