--- a/themes/hugo-book/layouts/_default/list.html
+++ b/themes/hugo-book/layouts/_default/list.html
@@ -9,7 +9,7 @@
       {{ end }}
   </ul>
 
-  {{ partial "docs/paging.html" . }}
+  {{ partial "docs/list-paging.html" . }}
 {{ end }}
 
 {{ define "toc" }}
