theme: Insert divider & single-paging at the footer

--- a/themes/hugo-book/assets/book.css
+++ b/themes/hugo-book/assets/book.css
@@ -1,5 +1,6 @@
 @import "components/_container.css";
 @import "components/_details.css";
+@import "components/_divider.css";
 @import "components/_header.css";
 @import "components/_heading.css";
 @import "components/_hint.css";
@@ -9,6 +10,7 @@
 @import "components/_list-paging.css";
 @import "components/_post.css";
 @import "components/_post-term.css";
+@import "components/_single-paging.css";
 @import "components/_tag.css";
 @import "components/_toc.css";
 
