--- a/themes/hugo-book/layouts/_default/single.html
+++ b/themes/hugo-book/layouts/_default/single.html
@@ -10,6 +10,12 @@
       </div>
     </section>
   </article>
+
+  <div class="mb-3 mt-16">
+      {{ partial "docs/divider.html" }}
+  </div>
+
+  {{ partial "docs/single-paging.html" . }}
 {{ end }}
 
 {{ define "toc" }}
