--- a/themes/hugo-book/layouts/partials/docs/icon.html
+++ b/themes/hugo-book/layouts/partials/docs/icon.html
@@ -1,4 +1,14 @@
-{{ if eq .Icon "calendar" -}}
+{{- if eq .Icon "arrow-left" -}}
+  <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24"
+       stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/>
+  </svg>
+{{- else if eq .Icon "arrow-right" -}}
+  <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24"
+       stroke="currentColor">
+    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"/>
+  </svg>
+{{ else if eq .Icon "calendar" -}}
   <svg xmlns="http://www.w3.org/2000/svg"{{ with .Class }} class="{{ . }}"{{ end }} fill="none" viewBox="0 0 24 24"
        stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
