theme: Insert related posts at the footer

--- a/themes/hugo-book/assets/book.css
+++ b/themes/hugo-book/assets/book.css
@@ -10,6 +10,7 @@
 @import "components/_list-paging.css";
 @import "components/_post.css";
 @import "components/_post-term.css";
+@import "components/_related-posts.css";
 @import "components/_single-paging.css";
 @import "components/_tag.css";
 @import "components/_toc.css";
