--- a/themes/hugo-book/layouts/_default/baseof.html
+++ b/themes/hugo-book/layouts/_default/baseof.html
@@ -10,9 +10,7 @@
 </header>
 
 <main class="book-container">
-  <nav class="book-nav">
-      {{ template "menu" . }}
-  </nav>
+  {{ partial "docs/nav" . }}
 
   <div class="book-page">
     <div class="book-page__body">
