--- a/themes/hugo-book/assets/book.css
+++ b/themes/hugo-book/assets/book.css
@@ -5,6 +5,7 @@
 @import "components/_heading.css";
 @import "components/_hint.css";
 @import "components/_link.css";
+@import "components/_menu.css";
 @import "components/_nav.css";
 @import "components/_page.css";
 @import "components/_list-paging.css";
