--- a/themes/hugo-book/assets/components/_nav.css
+++ b/themes/hugo-book/assets/components/_nav.css
@@ -1,23 +1,15 @@
 :root {
-  --book-nav-w: 0px;
+  --nav-width: 0px;
 
   @screen lg {
-    --book-nav-w: 19.5rem;
+    --nav-width: 19.5rem;
   }
 }
 
-.book-nav {
-  @apply border-r bottom-0 fixed hidden left-[max(0px,50%-var(--book-container-w-max)/2)] lg:block overflow-auto px-6 py-8 top-[var(--book-header-h)] w-[var(--book-nav-w)] z-30;
+.nav {
+  @apply border-r bottom-0 fixed hidden left-[max(0px,50%-var(--book-container-w-max)/2)] lg:block overflow-auto px-6 py-8 top-[var(--book-header-h)] w-[var(--nav-width)] z-30;
 
   &__title {
     @apply font-bold mb-2;
-  }
-
-  &__item {
-    @apply block py-1 text-muted hover:text-link-hover;
-
-    &--active {
-      @apply font-bold text-black hover:text-black;
-    }
   }
 }
