theme: Use bold sans-serif fonts for the headings

--- a/themes/hugo-book/assets/components/_post.css
+++ b/themes/hugo-book/assets/components/_post.css
@@ -4,14 +4,12 @@
   }
 
   &__title {
-    @apply font-serif;
-
     &--level-1 {
       @apply font-bold text-4xl;
     }
 
     &--level-2 {
-      @apply font-semibold text-3xl;
+      @apply font-bold text-3xl;
     }
   }
 
