--- a/themes/hugo-book/assets/components/_heading.css
+++ b/themes/hugo-book/assets/components/_heading.css
@@ -2,23 +2,23 @@
   @apply flex items-center mb-2 mt-8;
 
   &--level-2 {
-    @apply border-b font-serif font-semibold mb-4 pb-2 text-3xl;
+    @apply border-b font-bold mb-4 pb-2 text-3xl;
   }
 
   &--level-3 {
-    @apply font-bold font-serif font-semibold text-2xl;
+    @apply font-bold text-2xl;
   }
 
   &--level-4 {
-    @apply font-bold font-sans text-xl;
+    @apply font-bold text-xl;
   }
 
   &--level-5 {
-    @apply font-bold font-sans text-lg;
+    @apply font-bold text-lg;
   }
 
   &--level-6 {
-    @apply font-bold font-sans text-base;
+    @apply font-bold text-base;
   }
 
   &__anchor-outer {
