theme: Add amazon shortcode

--- a/themes/hugo-book/assets/book.css
+++ b/themes/hugo-book/assets/book.css
@@ -1,3 +1,4 @@
+@import "components/_amazon.css";
 @import "components/_container.css";
 @import "components/_details.css";
 @import "components/_divider.css";
