shortcode: Improve katex rendering performance

--- a/themes/hugo-book/layouts/partials/docs/html-head.html
+++ b/themes/hugo-book/layouts/partials/docs/html-head.html
@@ -15,9 +15,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;700&family=Noto+Serif+JP:wght@700&display=swap" rel="stylesheet">
-{{- $mainCss := resources.Get "book.css" | resources.PostCSS | resources.Minify | resources.Fingerprint }}
+{{- $mainCss := resources.Get "css/book.css" | resources.PostCSS | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $mainCss.RelPermalink }}" {{ template "integrity" $mainCss }}>
-{{- $syntaxCss := resources.Get "syntax.css" | resources.Minify | resources.Fingerprint }}
+{{- $syntaxCss := resources.Get "css/syntax.css" | minify | fingerprint }}
 <link rel="stylesheet" href="{{ $syntaxCss.RelPermalink }}" {{ template "integrity" $syntaxCss }}>
 
 {{- template "_internal/google_analytics_async.html" . -}}
