--- a/themes/hugo-book/layouts/shortcodes/katex.html
+++ b/themes/hugo-book/layouts/shortcodes/katex.html
@@ -1,14 +1,16 @@
 {{- if not (.Page.Scratch.Get "katex") -}}
-  <!-- Include katex only first time -->
   <link rel="stylesheet" href="{{ relURL "vendor/katex-0.13.18/katex.min.css" }}"/>
-  <script defer src="{{ relURL "vendor/katex-0.13.18/katex.min.js" }}"></script>
-  <script defer src="{{ relURL "vendor/katex-0.13.18/contrib/auto-render.min.js" }}"
-          onload="renderMathInElement(document.body);"></script>
+  <script src="{{ relURL "vendor/katex-0.13.18/katex.min.js" }}" async></script>
+  {{- $autoRenderJs := resources.Get "js/katex-auto-render.js" | js.Build "katex-auto-render.js" | minify | fingerprint -}}
+  <script src="{{ $autoRenderJs.Permalink }}" defer></script>
   {{- .Page.Scratch.Set "katex" true -}}
 {{- end -}}
 
-<span {{- with .Get "class" }} class="{{ . }}"{{ end }}>
-{{ cond (in .Params "display") "\\[" "\\(" -}}
-    {{- trim .Inner "\n" -}}
-    {{- cond (in .Params "display") "\\]" "\\)" }}
-</span>
+{{- $inner := trim .Inner "\n" -}}
+{{- if (in .Params "display") }}
+  <div class="js-katex-display{{ with .Get "class" }} {{ . }}{{ end }}">
+      {{ $inner }}
+  </div>
+{{ else -}}
+  <span class="js-katex{{ with .Get "class" }} {{ . }}{{ end }}">{{ $inner }}</span>
+{{- end -}}
