theme: Set vertical margins around .katex-display

--- a/themes/hugo-book/assets/css/_markdown.css
+++ b/themes/hugo-book/assets/css/_markdown.css
@@ -89,9 +89,13 @@
     }
   }
 
-  .katex-display,
   .mermaid {
     @apply my-4;
+  }
+
+
+  .katex-display-outer {
+    @apply my-6;
   }
 
   .katex {
