--- a/themes/hugo-book/assets/css/components/_heading.css
+++ b/themes/hugo-book/assets/css/components/_heading.css
@@ -1,5 +1,5 @@
 .book-heading {
-  @apply flex mb-2 mt-8;
+  @apply flex font-sans mb-2 mt-8;
 
   &__anchor-outer {
     @apply flex-shrink hover:text-link-hover mr-2;
